docs/dolfin/1.6.0/python/source/programmers-reference/cpp/common/index.rst
.. Index file for the dolfin.cpp.common module.

.. _programmers_reference_cpp_common_index:

dolfin.cpp.common module
************************

Classes:

.. toctree::
    :maxdepth: 1

    BoolParameter
    DoubleArray
    DoubleParameter
    Event
    GlobalParameters
    IndexSet
    IntArray
    IntParameter
    MPI
    MPIInfo
    MPI_Comm
    ParameterValue
    Parameters
    Progress
    StringParameter
    SubSystemsManager
    Table
    TableEntry
    Timer
    UIntArray
    Variable

Functions:

.. toctree::
    :maxdepth: 1

    GlobalParameters_default_parameters
    MPI_MPI_AVG
    MPI_avg
    MPI_barrier
    MPI_compute_local_range
    MPI_gather
    MPI_global_offset
    MPI_index_owner
    MPI_is_broadcaster
    MPI_is_receiver
    MPI_local_range
    MPI_max
    MPI_min
    MPI_rank
    MPI_size
    MPI_sum
    SubSystemsManager_finalize
    SubSystemsManager_init_mpi
    SubSystemsManager_init_petsc
    SubSystemsManager_mpi_finalized
    SubSystemsManager_mpi_initialized
    SubSystemsManager_responsible_mpi
    SubSystemsManager_responsible_petsc
    begin
    debug
    deprecation
    dolfin_error
    dolfin_version
    dump_timings_to_xml
    end
    error
    f
    get_log_level
    git_commit_hash
    has_cholmod
    has_hdf5
    has_mpi
    has_openmp
    has_parmetis
    has_petsc
    has_scotch
    has_slepc
    has_tao
    has_umfpack
    has_zlib
    info
    info_stream
    info_underline
    init
    list_timings
    log
    monitor_memory_usage
    not_working_in_parallel
    set_log_active
    set_log_level
    set_output_stream
    sizeof_la_index
    tic
    time
    timing
    timings
    toc
    warning

Module docstring:

.. automodule:: dolfin.cpp.common
   :no-members:
   :no-undoc-members:
   :no-show-inheritance: